--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -13,20 +13,26 @@ OBJS		= $(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.o)
 
 all: $(NAME)
 
+#Gerar executavel
 $(NAME): $(OBJS)
 
+#Regra de compilacao dos objetos
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp | $(OBJ_DIR)
 	$(CC) $(CFLAGS) -c $< -o $@
 
+#Criar directorio para objetos
 $(OBJ_DIR):
 	@mkdir -p $(OBJ_DIR)
 
+#Limpar executavel
 clean:
 	rm -f $(NAME)
 
+#Limpeza total
 fclean: clean
 	rm -rf $(OBJ_DIR)
 
+#Recompilar
 re: fclean all
 
 .PHONY: all clean fclean re
