quebra de linha e executavel

--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -15,6 +15,7 @@ all: $(NAME)
 
 #Gerar executavel
 $(NAME): $(OBJS)
+	$(CC) $(CFLAGS) $(OBJS) -o $@
 
 #Regra de compilacao dos objetos
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp | $(OBJ_DIR)
