ex03 makefile done

--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -1,15 +1,15 @@
 NAME		= human
 CC			= c++
-CFLAGS		= -Wall -Wextra -Werror -std=c++98 $(INCLUDE)
-INCLUDE		= -Iinclude
+CFLAGS		= -Wall -Wextra -Werror -std=c++98
+
 
 #Directories
 SRC_DIR		= src
 OBJ_DIR		= obj
 
-SRCS		= $(SRC_DIR)/main.cpp $(SRC_DIR)/HumanA.cpp $(SRC_DIR)/HumanB.cpp $(SRC_DIR)/Weapon.cpp
+SRCS		= main.cpp HumanA.cpp HumanB.cpp Weapon.cpp
 
-OBJS		= $(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.o)
+OBJS		= $(SRCS:.cpp=.o)
 
 all: $(NAME)
 
@@ -18,20 +18,16 @@ $(NAME): $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $@
 
 #Regra de compilacao dos objetos
-$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp | $(OBJ_DIR)
+%.o: %.cpp
 	$(CC) $(CFLAGS) -c $< -o $@
-
-#Criar directorio para objetos
-$(OBJ_DIR):
-	@mkdir -p $(OBJ_DIR)
 
 #Limpar executavel
 clean:
-	rm -f $(NAME)
+	rm -f *.o
 
 #Limpeza total
 fclean: clean
-	rm -rf $(OBJ_DIR)
+	rm -f $(NAME)
 
 #Recompilar
 re: fclean all
